Postgres-Deployment-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      db: postgres-deployment
  template:
    metadata:
      labels:
        db: postgres-deployment
    spec:
      containers:
        - name: postgres-deployment
          image: postgres
          ports:
            - containerPort: 5432
