postgres-service-config.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: ClusterIP
  selector:
    db: postgres-deployment
  ports:
  - port: 5432
    targetPort: 5432
