redmine-service-conf.yml
apiVersion: v1
kind: Service
metadata:
  name: redmine-service
spec:
  type: NodePort
  selector:
    app: redmine-deployment
  ports:
    - port: 3000
      nodePort: 30000
      targetPort: 3000
