ingress-service-config.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name:  ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: redmine-service
              servicePort: 3000
